--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Chocolate</title>
 
   <!-- Favicon -->
 
-  <link rel="icon" type="image/svg+xml" href="../src/img/icons/chocolate-logo.svg">
+  <!-- <link rel="icon" type="image/svg+xml" href="/src/img/icons/chocolate-logo.svg"> -->
 
 
   <!-- Fonts styles -->
