--- a/src/index.html
+++ b/src/index.html
@@ -32,16 +32,18 @@
 
 <body>
 
-  <load src="partials/header.html" />
+  <load src="partials/how-made.html" />
+
+  <!-- <load src="partials/header.html" />
   <load src="partials/hero.html" />
   <load src="partials/advantages.html" />
   <load src="partials/components.html" />
-  <load src="partials/how-made.html" />
+
   <load src="partials/products.html" />
   <load src="partials/sellers.html" />
   <load src="partials/reviews.html" />
   <load src="partials/subscribe.html" />
-  <load src="partials/footer.html" />
+  <load src="partials/footer.html" /> -->
 
 
   <script type="module" src="/main.js"></script>
