--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 
   <load src="partials/header.html" />
   <load src="partials/hero.html" />
+  <load src="partials/advantages.html" />
   <load src="partials/how-made.html" />
 
   <load src="partials/mobile-menu.html" />
