--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Chocolate</title>
-  <link rel="icon" type="image/svg+xml" href="./public/favicon-chocolate.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon-chocolate.svg" />
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -16,7 +16,7 @@
   <load src="partials/advantages.html" />
   <load src="partials/how-made.html" />
 
-  <load src="partials/mobile-menu.html" />
+  <!-- <load src="partials/mobile-menu.html" /> -->
 
   <!-- <load src="partials/header.html" />
   <load src="partials/advantages.html" />
