--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,14 @@
   <load src="partials/header.html" />
   <load src="partials/hero.html" />
   <load src="partials/advantages.html" />
+  <load src="partials/unique-components.html" />
   <load src="partials/how-made.html" />
 
   <!-- <load src="partials/mobile-menu.html" /> -->
 
   <!-- <load src="partials/header.html" />
   <load src="partials/advantages.html" />
-  <load src="partials/components.html" />
+  <load src="partials/unique-components.html" />
 
   <load src="partials/products.html" />
   <load src="partials/sellers.html" />
