--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Simple Chocolate</title>
   <link rel="icon" type="image/svg+xml" href="/favicon-chocolate.svg" />
+
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" /> -->
+
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -16,6 +19,8 @@
   <load src="partials/advantages.html" />
   <load src="partials/unique-components.html" />
   <load src="partials/how-made.html" />
+  <load src="partials/our-products.html" />
+
 
   <!-- <load src="partials/mobile-menu.html" /> -->
 
@@ -30,7 +35,8 @@
   <load src="partials/footer.html" /> -->
 
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./main.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
 </body>
 
 </html>
