--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
   <load src="partials/unique-components.html" />
   <load src="partials/how-made.html" />
   <load src="partials/our-products.html" />
+  <load src="partials/top-sellers.html" />
+  <load src="partials/reviews.html" />
 
 
   <!-- <load src="partials/mobile-menu.html" /> -->
@@ -29,8 +31,7 @@
   <load src="partials/unique-components.html" />
 
   <load src="partials/products.html" />
-  <load src="partials/sellers.html" />
-  <load src="partials/reviews.html" />
+
   <load src="partials/subscribe.html" />
   <load src="partials/footer.html" /> -->
 
