--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,7 @@
   <load src="partials/reviews.html" />
   <load src="partials/subscribe.html" />
   <load src="partials/footer.html" /> -->
-
-
-  <!-- <load src="partials/mobile-menu.html" /> -->
+  <load src="partials/mobile-menu.html" />
 
   <script type="module" src="./main.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
