--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
   <load src="partials/subscribe.html" />
   <load src="partials/footer.html" /> -->
   <load src="partials/mobile-menu.html" />
+  <load src="partials/modal-buy-now.html" />
 
   <script type="module" src="./main.js"></script>
   <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
