--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
   <title>Simple Chocolate</title>
   <link rel="icon" type="image/svg+xml" href="/favicon-chocolate.svg" />
 
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" /> -->
-
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
@@ -27,9 +25,9 @@
   <load src="partials/mobile-menu.html" />
   <load src="partials/modal-buy-now.html" />
   <load src="partials/modal-review.html" />
+  <load src="partials/modal-subscribe.html" />
 
   <script type="module" src="./main.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script> -->
 </body>
 
 </html>
